--- a/矩阵的意义.md
+++ b/矩阵的意义.md
@@ -2,7 +2,7 @@
 
 
 
-矩阵不同于函数，是数学中对数字的另一种组合和运算方式，那问题来了：
+矩阵不同于函数，是数学中对数字/符号的另一种组合和运算方式，那问题来了：
 
 
 
@@ -13,7 +13,7 @@
 
 
 
-矩阵
+目前我还回答不了上述问题，尤其是---**函数和矩阵这两种非常基本的描述 量之间关系及其变化规律的“数据结构”，在本质上有什么联系和区别？**
 
 
 
@@ -26,4 +26,6 @@
 * 行列式的几何意义：
 
 **一个矩阵的行列式就是一个平行多面体的体积**。而特殊的，长方体的体积就是长宽高的乘积（及正交矩阵的行列式为特征值之积）
+
+
 
