添加了点估计的理解，并合并了概率论的相关内容

--- a/概率论.md
+++ b/概率论.md
@@ -60,6 +60,163 @@ PS：这种“对称”的“等概率”假设非常广泛，很多物理定律
 
 
 
+## 一个古典概型的例题
+
+### 前言
+
+一号解答是我的解答，同三号解答是一样的方法，只是思路顺序、事件描述上有所变化，但这正是此篇文章的重点，二号解答思路“惊奇”，也是本文的灵感来源。读懂本文后你会明白，只要你的思路清晰，你可以任意描述一个事件，用任意喜欢的思路去解答，结果最终会是对的，而且会发现，结果正确的解答中，虽然看似思路不一样，但是对比就能发现其本质规律。
+
+题目的求解反而是次要的，但明白求解步骤与方法是理解本文的前提，求解本身就需要读者具有一定的概率论基础，但是所谓的基础，都是可以用聪明的头脑代替的，因为毕竟这些基础都是聪明头脑（科学家）思考的结果罢了。
+
+
+
+### 题目
+
+设有两批数量相同的零件,己知有一批产品全部合格，另一批产品有25%不合格。 从两
+批产品中任取1只，经检验是正品,放回原处，并在原所在批次再取1只，试求这只产品是次品的概率。
+
+
+
+### 1号解答
+
+---
+
+设所求事件为$$B$$。令**在第一次取出正品的条件下，取自第i批为事件$$A_i$$。**由题目中$$B$$事件描述是在原所在批次再取一只。则 $$B=A_1BUA_2B$$，又因 $$A_1、A_2$$ “互斥”​，所以有：
+
+​		$$P(B)=P(A_1B)+P(A_2B)=P(A_1)P(B|A_1)+P(A_2)P(B|A_2)$$
+
+由两批次的合格率可以直接得出：
+
+​		$$P(B|A_1)=0;P(B|A_2)=0.25$$
+
+
+
+由上述可知$$A_i$$是一个条件下的事件，我们设第一次取出正品为事件$$X$$，取自第i批为事件$$Y_i$$，
+
+显然 $$P(Y_1)=P(Y_2)=0.5$$，且$$Y_1、Y_2$$  “互斥”（也就是如果发生$$X$$，则不是$$Y_1$$发生，就是$$Y_2$$发生），则$$P(X)=P(XY_1)+P(XY_2)$$，所以有：
+
+​		$$A_i=Y_i|X$$
+
+​		$$P(A_i)=P(Y_i|X)=\frac{P(XY_i)}{P(X)}$$
+
+​		$$P(X)=P(XY_1)+P(XY_2)=P(Y_1)P(X|Y_1)+P(Y_2)P(X|Y_2)$$
+
+
+
+又由两批次的合格率可以直接得出：
+
+​		$$P(X|Y_1)=0;P(X|Y_2)=0.25$$
+
+最后我们将$$P(A_i)$$代入第一个式子，就得到了答案。
+
+
+
+### 2号解答
+
+---
+
+设事件$$A$$为两批产品中任取一只为正品，事件$$B$$为原批中再取一只为次品。则题中所求为：
+
+​		$$P(B|A)=\frac{P(AB)}{P(A)}$$
+
+设取自第i批为事件$$W_i$$，
+
+$$P(A)=P(AW_1)+P(AW_2)=P(W_1)P(A|W_1)+P(W_2)P(A|W_2)$$
+
+
+
+下面求解$$P(AB)$$：
+
+$$AB=W_1AB$$ U $$W_2AB$$，又$$W_1、W_2$$“互斥”（这里的AB要和B以及所求的B｜A区分开，具体到《剖析》部分的Q1中会重点讲解），所以有：
+
+$$P(AB)=P(AW_1B)+P(AW_2B)=P(AW_1)P(B|AW_1)+P(AW_2)P(B|AW_2)$$
+
+
+
+有$$P(AW_i)=P(W_i)P(A|W_i)$$，其中：
+
+​		$$P(A|W_1)=1;P(B|AW_1)=0;P(A|W_2)=0.75;P(B|AW_2)=0.25$$
+
+最终代入可以得到答案。
+
+
+
+### 3号解答
+
+---
+
+设$$H_i(i=1,2)$$为“第一次从第i批产品中抽取”。$$A$$ 为“取正品”。则有：
+
+​		$$P(H_1) =P(H_2)= \frac{1}{2}$$
+
+即有：
+
+​		$$P(A) =P(H_1)P(A|H_1) + P(H_2)P(A|H_2)$$
+
+从而有：
+
+​		$$P(H_1|A)= \frac{P(H)P(A|H_1)}{P(A)}$$
+
+​		$$P(H_2|A)==1-P(H_1|A)$$
+
+
+
+又设$$C_i(i=1,2)$$为“第二次从第i批产品中抽取”，则有：
+
+​		$$P(\bar{A}) =P(C_1)P(\bar{A}|C_1) +P(C_2)P(\bar{A}|C_2)$$
+
+求解完毕。
+
+
+
+### 剖析
+
+接下来我将以问题和回答 (Q/A) 的方式剖析这个题目以及这三种解答。
+
+---
+
+**Q1：为何在2号解答中，所求概率为何变成了一个条件概率？这个解答中的B事件同1号解答的B事件、3号解答的$$\bar{A}$$ 事件有和区别？**
+
+**A1 :**
+
+首先，**一个事件在不同的表达方式下就会有不同的形式**：
+
+* 一号解答中的B事件为所求事件，这隐含的信息就是：B事件 = 在已知第一次抽到正品的条件下，第二次在原所在批次抽取，结果为次品。其实这本身就是一个事件条件下的事件。
+* 类似的情况很多，比如我可以设第一批中抽到次品为事件W，则W也可以描述为在抽自第一批的条件下抽到次品。这是W就好像是一个事件条件下的事件。在本题中也有例子，比如1号解答中的$$X|Y_1、B|A_1$$，3号解答中的$$A|H_1、\bar{A}|C_1$$，就对应着$$W/\overline{W}$$。
+* 现在再看2号解答中将所求事件设为$$B|A$$，就不难理解了，但是需要注意的一点是，2号解答中B事件的描述可能会引起歧义，这个原批取，是包含了A发生的条件下了吗？因为题目中给的条件就是A事件发生了。 所以**2号解答的B世界的完整描述应该是这样：第一次两批中任取一个，放回，并在原批次再取一个为次品。**注意到，其与1号解答中的B事件区别就在于1好解答的B事件包含了取出为正品这个事件的发生。
+
+其次，所谓的条件概率是该事件为一个**事件**发生的条件下发生的概率。而**关键在于这个条件是一个随机事件才行，如果是一个确定的必然事件，就不能称为”条件“。**这个表达很难理解，但确是本文的重中之重。举几个例子：
+
+1.
+
+>  对于题目所求事件，其前提条件众多：条件1（在两批中任取一个产品）、条件2（取出的产品为正品）、条件3（将取出的产品放回）、条件4（在原批次中再取一只）、条件5（最后取出的这个产品为次品）、隐含条件（放回原批和原批中取，但我们并不知道这批是题目中的“有一批”还是“另一批”）。当上述条件全部成立，就是所求事件。那要不要分别设对应的5个事件ABCDE，然后所求为：E｜D｜C｜B｜A呢？并不。why？
+>
+>  **因为条件1、3、4为确定的必然事件，而只有条件2、5才是随机事件。**比如条件1：在两批中任取一个产品，我们只能取一件产品，不能取两件，不能不取，就是确定的这个事件，而条件2：在条件1下取出的产品为正品，这并不是确定的，因为可能取出的产品为次品。所以：**有些“条件”是题目给出的限定条件，它并不是个随机事件，那它在概率论中就不是条件概率中的那个“条件”。**
+
+2.
+
+> 而且这个“条件”是否可以称为随机事件是视情况而定的。比如我就一批产品，次品占25%，那我随机抽取一只为次品记为事件K，概率0.25。这也是在默认条件（我抽取自这一批产品）下的，但是只有这一批，我也在这一批中抽，这个所谓的“条件”就不是个随机事件。反观题目中的两批产品任取一只，而这个抽取自哪一批就成了不确定的随机事件了，此时第二批的25%的次品率本身就变成了条件概率——在抽自第二批的条件下为次品的概率。
+
+
+
+---
+
+**Q2：3号解答中A事件为取正品，而最后求的是$$\bar{A}$$，$$\bar{A}$$的概率不应该是$$1-P(A)$$吗？**
+
+**A2：**
+
+这里存在说明不足，可以说是一个错误。严谨的来讲，A事件应该为在两批中任取一个为正品，则$$\bar{A}$$很明显不是所求的事件。而所求的事件的准确描述在**Q1**的回答中已经说明了。所以这里就是错误。
+
+值得说明的一点是：**有很多时候一个事件的准确描述太过复杂，我们往往会简略说明，但正因如此，这个简单的描述会误导我们之后的思路，从而使解答一步步出错。**
+
+
+
+---
+
+
+
+
+
 ## 基本概念
 
 首先说明，我是不倾向于在文章中大量提及专业术语的，但是无奈概率论很多术语很违反常理，我要不提的话，就会出现我的文章你看的挺明白，要是拿本教材学起来就一脸懵逼，所以还是解释一下这些基本概念（专业术语）。
@@ -89,6 +246,10 @@ PS：这种“对称”的“等概率”假设非常广泛，很多物理定律
 1. 随机事件是结果
 
   2. 随机事件是某个随机试验的结果
+
+
+
+
 
 
 
@@ -186,6 +347,8 @@ Anyway，这为了说明**将语言表达数学化会使大量准确的信息被
 
 
 
+
+
 ### 期望与方差
 
 我们如果知道一个随机变量的分布就可以“完全”预测它。（这里挖个坑，概率是不确定的，但是我们确定了它的分布，就确定了它每一种可能的结果发生的概率，那这叫确定的还是不确定的？所谓的量子力学就是将这种理论假设引入物理中，本质上规律还是确定的，只是一次试验的结果存在某种不确定性，而这种不确定性———“分布”是确定的）量子力学的问题我之后的物理科普会详细解释。
@@ -197,6 +360,101 @@ Anyway，这为了说明**将语言表达数学化会使大量准确的信息被
 我们如果知道一个学生每次考试，以及每次习题、作业的正确率及其解答方式的正确率，以及他/她对这个科目每个概念的理解，那么就可以完全确定他/她对这个科目的掌握程度。而这显然是很复杂的，我们就决定出一套卷子，尽可能的考到更多的知识点和概念，让这一套卷子反应该学生对该科目的掌握程度，这必然会有所偏差，但是相比于节省的时间精力，这是值得的。所以我们就想对随机变量也来这么“一套卷子”———这就是期望与方差。
 
 关于期望与方差的概念，我感觉没太多难以理解的，基本就是字面意思，日后若发现问题再补充吧。
+
+
+
+### 估计与检验
+
+#### 前言
+
+对估计与检验的深度思考后，这部分内容将让读者对概率论有深刻的理解！
+
+既然我概率论文章一开始就不是针对初学者写的，那现在我也直接公式起手吧，但还是很建议有点基础的同学/读者可以看到最后，若理解了这部分，你可能会收获巨大。
+
+
+
+什么是估计呢？我估计大家都没仔细思考过什么是估计。让我先来个浅显的例子：（这不是比喻，这真的是例子）
+
+“我估计特朗普不是好人”。这句话没毛病，你若说：“特朗普不是好人”，这问题大了，这是一个复杂的随机事件，你若是说这是个必然事件，那我要提醒你，现实世界中几乎没有必然事件。比如"这世界的人类非男即女"，都不是一个必然事件。这就扯远了，总之，必然事件是一个理想情况。
+
+所以我怎么估计特朗普不是好人呢？可不可信呢？首先我得说出特朗普不是好人的概率是多少？怎么得出概率呢？得有分布、有样本。分布就需要对好人有个准确的定义（而且这应该是一个量，而不是非好即坏的定义），找出人身上的特点，及满足这个特点的人是好人的概率（得“好人分”在高于b分的概率）。
+
+这是个极其复杂的过程，但是可以想象，比如我以前听人说：“鼻子大的人是当官的料”，这可不能乱说，首先说概率，这个事件就比特朗普是不是好人简单多了。我们可以尽可能的统计全人类的鼻子维度，平均值为参考点，再统计当官的人的鼻子平均维度，最后比较其与参考点的差距，这只是均值；还要统计官鼻子的方差，甚至还要把当官定量下来（比如多大的官），然后计算官鼻子与官大小的关系等等。
+
+虽然我没有去做这些实验，但我盲猜这和我当选美国总统概率接近。（注意盲猜是个准确的用词，这里我就不能估计了，因为我没有理论，也没有做试验，就是瞎猜）。好了，正文开始。
+
+
+
+
+
+#### 正文
+
+**所谓估计，就是我们根据假设的原分布推导出样本均值与样本方差应该服从的分布，然后根据样本均值去反推原分布期望（或其他参数）在某一范围的概率。**
+
+这个我们假设的原分布，就是前言中的“好人的分布”，显然这是一个复杂的多维随机变量的函数的分布；这里的样本，就是我们看到的特朗普的表现，而总体显然是特朗普的一切表现与想法，这也是定义一个人比较准确的方式了。而我们根据现有的表现推测特朗普是好人的概率，就是估计。
+
+
+
+* 问题：都知道了原分布，为何还要反推出原分布的期望？
+
+* 答：准确的说，是**知道原分布的类型，而不知道确切参数**，比如知道这种情况要检测的“总体”（总体对应的随机变量X）服从指数分布，却不知道λ，这时就根据指数分布的表达式，求出样本均值、方差会服从怎样的分布（注意这个分布是与原分布的参数λ有关，往往其与原分布的期望EX有关），然后通过这个分布与测到的值，倒推出原指数分布的λ。
+
+然而上文举的指数分布的例子会很复杂。而由于正态分布的某些特性，会让计算变得简单；且又因为正态分布有一定的普遍性（中心极限定理）。所以大学课程仅要求掌握原分布为正态分布下的情况。那我也会以正态分布为例：
+
+
+
+---
+
+这部分是正态分布区间估计具体的推导过程。中间可能会忽略很多细节，因为教材上都有。另外由于有些平台不支持Latex，所以X的样本均值就用Xbar来代表。
+
+![A18805CF-124A-46CA-A4A4-ECD007307D07_1_201_a](概率论框架.assets/A18805CF-124A-46CA-A4A4-ECD007307D07_1_201_a.jpeg)
+
+X这样一个随机变量，比如就是某工厂生产的灯泡的亮度，服从正态分布挺合理。现在我们取了n个灯泡，第i个灯泡的亮度就是Xi，n个灯泡的平均亮度也是一个随机变量Xbar（注意，这个亮度是测量之前的，跟掷硬币一样，不知道它有多亮）。这是我们根据这n个灯泡的亮度独立同分布，等一系列“骚操作”，就得出了上图这个Xbar的分布函数。（课本都有证明过程）图像就是下图：
+
+<img src="概率论框架.assets/F0D78BD8-CCB0-49C7-B479-1225EE9634DF_1_201_a.jpeg" alt="F0D78BD8-CCB0-49C7-B479-1225EE9634DF_1_201_a" style="zoom: 25%;" />
+
+一般情况下（就像掷硬币）我们都是已知这个μ，让我们求Xbar若测量值在某个范围的概率，这种题也经常做。但这根本不是一般情况！我们哪知道这工厂生产的灯泡的亮度的期望？不可能知道啊！就是不知道才检测啊，啥都知道了还检测吗？
+
+所以真正的一般情况下，我们不知道这个μ，我们找几个测一测，取个平均值，那这就是μ了？肯定不是啊！所以这时更能理解Xbar这个分布的意义------找的n个灯泡的平均亮度，期望是μ，方差是σ^2/n，也有波动，它在μ周围的概率较大（如上图）。
+
+但话说回来，怎么用Xbar估计μ呢？它俩又不相等。我们都有它俩服从的分布了，也就是在任意区间的概率都知道！把这个Xbar“化简”一下，会更清楚：
+
+<img src="概率论框架.assets/IMG_1319.jpeg" alt="IMG_1319" style="zoom: 25%;" />
+
+区间估计就结束了。
+
+---
+
+但这样看起来可能很困惑：
+
+1. 明明Xbar是变量，为何μ成了变量？
+
+2. 此时测得的Xbar不应该代表全部的Xbar呀！怎能凭这一个X判定μ的概率？
+3. 我们都不知道μ，居然还能知道（确定）σ？这不胡扯！
+
+
+
+* 关于问题1: 我们为什么知道μ？事实上我们从不知道！**人类一直以来都是拿着试验结果X逼近一个值，然后思考出一套理论A来解释这个理论值μ是怎么来的**，而理论A就是分布函数。另一方面，μ和Xbar是平等的变量，若可以接受μ是常数，凭啥“瞧不起”Xbar呢？回答问题2时再谈。
+
+  
+
+  这时我们可以重新再再再**思考下掷硬币的问题**！就会发现，我们并不知道这个**EX = μ = 0.5**。而只是这么多年来的试验结果Xbar们，表明它非常接近0.5，所以我们相信（或者假设）在理想情况下，μ 就是0.5！然而大量教材却本末倒置的讲推测结果说成事实，试验结果却显得“轻浮”，这个思考推理的过程甚至只字不提！
+
+
+
+* 关于问题2: 的确这样是不严谨的，所以往往会多测几组，就大致认为测量结果时准确的。准确的来讲，若假设分布是确定的（其实分布都是有偏差的），那么只能确定样本均值Xbar与假设的原分布期望μ的关系。
+
+
+
+* 关于问题3: 的确，所以实际中会用另一个“更靠谱”的检验方式，也就是t分布检验，也就是将原分布标准差σ换成样本标准差S，化简一下服从t分布，这样未知的只有原分布期望μ了，也就检验的更准确了。
+
+
+
+#### 简单谈点估计
+
+所谓点估计，可以理解为简化的（不够准确的）区间估计。
+
+点估计往往用与我们估计其他参数（比如λ），但这种参数绝大多数情况是期望μ的函数，我们其实可以用区间估计 估计出期望μ的在某一“大概率”取值的区间，然后根据函数单调性等解出所求参数λ的区间，这样比较准确，但是可能这样就复杂一些了吧，总之不是大纲要求，但需要理解到这一点。
 
 
 
