--- a/概率论.md
+++ b/概率论.md
@@ -62,6 +62,8 @@ PS：这种“对称”的“等概率”假设非常广泛，很多物理定律
 
 ## 一个古典概型的例题
 
+这部分在这里有些突兀，就这样吧。
+
 ### 前言
 
 一号解答是我的解答，同三号解答是一样的方法，只是思路顺序、事件描述上有所变化，但这正是此篇文章的重点，二号解答思路“惊奇”，也是本文的灵感来源。读懂本文后你会明白，只要你的思路清晰，你可以任意描述一个事件，用任意喜欢的思路去解答，结果最终会是对的，而且会发现，结果正确的解答中，虽然看似思路不一样，但是对比就能发现其本质规律。
