再次研究条件概率的事件描述问题

--- a/概率论.md
+++ b/概率论.md
@@ -60,11 +60,11 @@ PS：这种“对称”的“等概率”假设非常广泛，很多物理定律
 
 
 
-## 一个古典概型的例题
+## 具体什么是事件？什么是条件概率？
 
-这部分在这里有些突兀，就这样吧~
+这部分在这里有些突兀，文章前面已经说明了什么是事件，那为何还问：“什么是事件？”？因为我发现即使我认为我讲的很清楚的概念，但由于它的抽象性，还是会有不同深度的理解，而**对一个相对“复杂”的例子深度的剖析，往往才能使得对概念的理解变得深刻、准确。**所以这部分我就举一个“常见”的例题，来深度的讨论下，如何描述一个事件？并对比总结：什么是条件概率？
 
-### 前言
+### 前言？
 
 一号解答是我的解答，同三号解答是一样的方法，只是思路顺序、事件描述上有所变化，但这正是此篇文章的重点，二号解答思路“惊奇”，也是本文的灵感来源。读懂本文后你会明白，只要你的思路清晰，你可以任意描述一个事件，用任意喜欢的思路去解答，结果最终会是对的，而且会发现，结果正确的解答中，虽然看似思路不一样，但是对比就能发现其本质规律。
 
@@ -187,18 +187,6 @@ $$P(AB)=P(AW_1B)+P(AW_2B)=P(AW_1)P(B|AW_1)+P(AW_2)P(B|AW_2)$$
 * 类似的情况很多，比如我可以设第一批中抽到次品为事件W，则W也可以描述为在抽自第一批的条件下抽到次品。这是W就好像是一个事件条件下的事件。在本题中也有例子，比如1号解答中的$$X|Y_1、B|A_1$$，3号解答中的$$A|H_1、\bar{A}|C_1$$，就对应着$$W/\overline{W}$$。
 * 现在再看2号解答中将所求事件设为$$B|A$$，就不难理解了，但是需要注意的一点是，2号解答中B事件的描述可能会引起歧义，这个原批取，是包含了A发生的条件下了吗？因为题目中给的条件就是A事件发生了。 所以**2号解答的B世界的完整描述应该是这样：第一次两批中任取一个，放回，并在原批次再取一个为次品。**注意到，其与1号解答中的B事件区别就在于1好解答的B事件包含了取出为正品这个事件的发生。
 
-其次，所谓的条件概率是该事件为一个**事件**发生的条件下发生的概率。而**关键在于这个条件是一个随机事件才行，如果是一个确定的必然事件，就不能称为”条件“。**这个表达很难理解，但确是本文的重中之重。举几个例子：
-
-1.
-
->  对于题目所求事件，其前提条件众多：条件1（在两批中任取一个产品）、条件2（取出的产品为正品）、条件3（将取出的产品放回）、条件4（在原批次中再取一只）、条件5（最后取出的这个产品为次品）、隐含条件（放回原批和原批中取，但我们并不知道这批是题目中的“有一批”还是“另一批”）。当上述条件全部成立，就是所求事件。那要不要分别设对应的5个事件ABCDE，然后所求为：E｜D｜C｜B｜A呢？并不。why？
->
->  **因为条件1、3、4为确定的必然事件，而只有条件2、5才是随机事件。**比如条件1：在两批中任取一个产品，我们只能取一件产品，不能取两件，不能不取，就是确定的这个事件，而条件2：在条件1下取出的产品为正品，这并不是确定的，因为可能取出的产品为次品。所以：**有些“条件”是题目给出的限定条件，它并不是个随机事件，那它在概率论中就不是条件概率中的那个“条件”。**
-
-2.
-
-> 而且这个“条件”是否可以称为随机事件是视情况而定的。比如我就一批产品，次品占25%，那我随机抽取一只为次品记为事件K，概率0.25。这也是在默认条件（我抽取自这一批产品）下的，但是只有这一批，我也在这一批中抽，这个所谓的“条件”就不是个随机事件。反观题目中的两批产品任取一只，而这个抽取自哪一批就成了不确定的随机事件了，此时第二批的25%的次品率本身就变成了条件概率——在抽自第二批的条件下为次品的概率。
-
 
 
 ---
@@ -211,9 +199,59 @@ $$P(AB)=P(AW_1B)+P(AW_2B)=P(AW_1)P(B|AW_1)+P(AW_2)P(B|AW_2)$$
 
 值得说明的一点是：**有很多时候一个事件的准确描述太过复杂，我们往往会简略说明，但正因如此，这个简单的描述会误导我们之后的思路，从而使解答一步步出错。**
 
-
-
 ---
+
+
+
+#### 什么是条件概率？
+
+所谓的**条件概率是该事件为一个事件发生的条件下发生的概率**。而**关键在于这个条件是一个随机事件才行，如果是一个确定的必然事件，就不能称为”条件“。因为没有意义。**这个表达很难理解，但确是本文的重中之重。举几个例子：
+
+1.
+
+>  对于题目所求事件，其前提条件众多：
+>
+>  * 条件（事件）1：在两批中任取一个产品
+>
+>  * 条件（事件）2：取出的产品为正品
+>
+>  * 条件（事件）3：将取出的产品放回
+>
+>  * 条件（事件）4：在原批次中再取一只
+>
+>  * 条件（事件）5：最后取出的这个产品为次品
+>
+>  * 隐含条件：放回原批和原批中取，但我们并不知道这批是题目中的“哪一批”。（这容易理解，只有生产者才知道批次，我们作为检验者，只能自己划分1号、2号批次，而不知道1、2号批次的正品率）
+>
+>  当上述条件全部成立，就是所求事件。那要不要分别设对应的5个事件ABCDE，然后所求为：E｜D｜C｜B｜A呢？并不。why？
+>
+>  **因为条件1、3、4为确定的必然事件，而只有条件2、5才是随机事件。**比如条件1：在两批中任取一个产品，我们只能取一件产品，不能取两件，不能不取，就是确定的这个事件，而条件2：在条件1下取出的产品为正品，这并不是确定的，因为可能取出的产品为次品。所以：**有些“条件”是题目给出的限定条件，它并不是个随机事件，那它在概率论中就不是条件概率中的那个“条件”。**
+>
+>  
+>
+>  也正因如此，有些必然事件“强行”作为条件，会有歧义。比如上述的条件4：原批中再取一只，它必然在条件1、条件3的前提下，若没有第一次取产品，何来原批呢？但若我们《**将必然事件作为其后发生的随机事件的一部分**》，事情才容易合理解释：
+>
+>  * 设A=新事件1：在两批中任取一个产品，取出的产品为正品。
+>  * 设B=新事件2：在两批中任取一个产品，将刚刚取出的产品放回，在原批次中再取一只（但并不知道具体是哪一批）。最后取出的这个产品为次品。
+>  * 设C = 新事件3：在两批中任取一个产品，取出的产品为正品。将刚刚取出的产品放回，在原批次中再取一只（但并不知道具体是哪一批）。最后取出的这个产品为次品。
+>
+>  仔细观察前后的变化，“新事件”才是最完整的描述，当然做题时不需要描述的如此仔细，但是如果把自己迷惑了就得不偿失了。
+>
+>  注意新事件2，也就是上文事件B，是没有包含第一次取出为正品的。而这个B，正是2号解答中B。事件C=AB，而原题所求为P(B|A)。
+
+
+
+2.
+
+> 而且**这个“条件”是否可以称为随机事件是视情况而定的**。比如我就一批产品，次品占25%，那我随机抽取一只为次品记为事件K，概率0.25。这也是在默认条件（我抽取自这一批产品）下的，但是只有这一批，我也在这一批中抽，这个所谓的“条件”就不是个随机事件。
+>
+> 反观题目中的两批产品任取一只，而这个抽取自哪一批就成了不确定的随机事件了，此时第二批的25%的次品率本身就变成了条件概率——在抽自第二批的条件下为次品的概率。
+
+
+
+
+
+
 
 
 
