再次研究条件概率的事件描述问题

--- a/概率论.md
+++ b/概率论.md
@@ -238,6 +238,8 @@ $$P(AB)=P(AW_1B)+P(AW_2B)=P(AW_1)P(B|AW_1)+P(AW_2)P(B|AW_2)$$
 >  仔细观察前后的变化，“新事件”才是最完整的描述，当然做题时不需要描述的如此仔细，但是如果把自己迷惑了就得不偿失了。
 >
 >  注意新事件2，也就是上文事件B，是没有包含第一次取出为正品的。而这个B，正是2号解答中B。事件C=AB，而原题所求为P(B|A)。
+>
+>  这种思路还有一个容易出问题的地方：原批也就意味着：A交与“取自第一批” = AB交与“取自第一批”。总之，怎么个思路都是条条大路通罗马的。
 
 
 
