矩阵左右问题，向量空间的解释

--- a/概率论.md
+++ b/概率论.md
@@ -235,11 +235,9 @@ $$P(AB)=P(AW_1B)+P(AW_2B)=P(AW_1)P(B|AW_1)+P(AW_2)P(B|AW_2)$$
 >  * 设B=新事件2：在两批中任取一个产品，将刚刚取出的产品放回，在原批次中再取一只（但并不知道具体是哪一批）。最后取出的这个产品为次品。
 >  * 设C = 新事件3：在两批中任取一个产品，取出的产品为正品。将刚刚取出的产品放回，在原批次中再取一只（但并不知道具体是哪一批）。最后取出的这个产品为次品。
 >
->  仔细观察前后的变化，“新事件”才是最完整的描述，当然做题时不需要描述的如此仔细，但是如果把自己迷惑了就得不偿失了。
+>  仔细观察前后的变化，“新事件”才是最完整的描述，当然做题时不需要描述的如此仔细，但是如果把自己迷惑了就得不偿失了。注意新事件2，也就是上文事件B，是没有包含第一次取出为正品的。而这个B，正是2号解答中B。事件C=AB，而原题所求为P(B|A)。这种思路还有一个容易出问题的地方：原批也就意味着：A交与“取自第一批” = AB交与“取自第一批”。总之，怎么个思路都是条条大路通罗马的。
 >
->  注意新事件2，也就是上文事件B，是没有包含第一次取出为正品的。而这个B，正是2号解答中B。事件C=AB，而原题所求为P(B|A)。
->
->  这种思路还有一个容易出问题的地方：原批也就意味着：A交与“取自第一批” = AB交与“取自第一批”。总之，怎么个思路都是条条大路通罗马的。
+>  进一步探讨：A与B事件独立吗？P(AB) =? P(A)P(B)。其实仔细思考下B事件会发现，B事件就是一次新的$\bar{A}$事件，也就是说：如果我们不知道第一次拿出来的是不是正品，放回后再抽一次，其实这个事件跟直接随机抽一次是一样的，即$P(B)=P(\bar{A})$。？？？？？
 
 
 
