--- a/概率论.md
+++ b/概率论.md
@@ -58,6 +58,12 @@ PS：这种“对称”的“等概率”假设非常广泛，很多物理定律
 
 所以我们对于一类事情，关注点不一样，所得的结果就不一样，所呈现的分布就不一样。这就有了千奇百怪的各种分布，而它们其实大同小异，甚至几乎每种都可以被“掷硬币”这件事来推理出来。比如妇孺皆知的正态分布，还有没有学习过概率论的读者可能没听过的泊松分布、指数分布等等，它们本质上都是掷硬币问题的推广，如果接下来我们能理解这些，也许就能对概率论有了深刻的认识。
 
+## 抓阄模型
+
+![抓阄模型](概率论.assets/抓阄模型.jpeg)
+
+
+
 
 
 ## 具体什么是事件？什么是条件概率？
