估计中为何仅讨论正态分布？

--- a/概率论.md
+++ b/概率论.md
@@ -445,9 +445,11 @@ Anyway，这为了说明**将语言表达数学化会使大量准确的信息被
 
 * 答：准确的说，是**知道原分布的类型，而不知道确切参数**，比如知道这种情况要检测的“总体”（总体对应的随机变量X）服从指数分布，却不知道λ，这时就根据指数分布的表达式，求出样本均值、方差会服从怎样的分布（注意这个分布是与原分布的参数λ有关，往往其与原分布的期望EX有关），然后通过这个分布与测到的值，倒推出原指数分布的λ。
 
-然而上文举的指数分布的例子会很复杂。而由于正态分布的某些特性，会让计算变得简单；且又因为正态分布有一定的普遍性（中心极限定理）。所以大学课程仅要求掌握原分布为正态分布下的情况。那我也会以正态分布为例：
+然而上文举的指数分布的例子会很复杂。而由于**正态分布的某些特性**，会让计算变得简单；且又因为正态分布有一定的普遍性（中心极限定理）。所以大学课程仅要求掌握原分布为正态分布下的情况。那我也会以正态分布为例：
 
-
+> 按理说有中心极限定理，指数分布的Xbar与正态分布Xbar应该都服从正态吧？
+>
+> 中心极限定理要求n->∞，也就是需要样本空间无穷大，而事实上我们检测，抽取样本都是一个“小数量”，而正态分布有个特性：任意的n，都满足样本均值依然服从正态分布。
 
 ---
 
